# FinalProject-Collaboration-of-Autonomous-Mobile-Robots-with-Different-Wheel-Types-in-Transportation

./: README.md
Holonomic_1/Arduino/: Read Me
Holonomic_1/pete_ws/devel/: _setup_util.py  setup.sh
Holonomic_1/pete_ws/src/beginner_tutorials/: CMakeLists.txt  package.xml
Holonomic_1/pete_ws/src/encode_publish/: CMakeLists.txt  package.xml
Holonomic_1/pete_ws/src/holo/: README.md
Holonomic_1/pete_ws/src/slave/: CMakeLists.txt
Holonomic_1/pete_ws/src/slavedrive/: CMakeLists.txt  package.xml
Holonomic_1/pete_ws/src/slavespeed/: CMakeLists.txt  package.xml
Holonomic_1/pete_ws/src/test/: CMakeLists.txt  package.xml
Holonomic_1/pete_ws/src/urdf_2/: CMakeLists.txt
Holonomic_2/Arduino/: Read Me
Holonomic_2/Arduino/fromslave2/: fromslave2.ino
Holonomic_2/pete_ws/devel/: _setup_util.py
Holonomic_2/pete_ws/src/holo/holo_gazebo/: package.xml
Holonomic_2/pete_ws/src/holo/holo_gazebo/launch/: holo_world.launch  spawn_one_holo.launch
Holonomic_2/pete_ws/src/slave/: CMakeLists.txt  package.xml
Holonomic_2/pete_ws/src/slavedrive/: CMakeLists.txt
Laptop/Backup/: hologazebobackup  holoxacrobackup  masterkinematicgazebo02backup
Laptop/Backup/codeforthesis/: floor9.pgm  floor9.sdf  floor9_formation1.launch  floor9_formation2.launch  fromleaderbackup  fromslave  fromslave2  odomlis
Laptop/Backup/dontknow/: leadercontroller.cpp  odom_holo_01.bag  odom_holo_02.bag  odom_holo_03.bag  spareino
Laptop/Backup/dontknow/work/: holonomic_listener
Laptop/Backup/imuforpublishpaper/: IMUVALUE10.TXT  IMUVALUE2.TXT  IMUVALUE4.TXT  IMUVALUEslaveisleader03.TXT  IMUVALUEslaveisleader07.TXT  IMUVALUEslaveisleader08.TXT  TIME10.TXT  TIME2.TXT  TIME4.TXT  TIMEslaveisleader03.TXT  TIMEslaveisleader07.TXT  TIMEslaveisleader08.TXT
Laptop/Backup2(Test Algorithm Attempt)/Curve/: Curve.ino
Laptop/Backup2(Test Algorithm Attempt)/Curve2/: Curve2.ino
Laptop/Backup2(Test Algorithm Attempt)/Curvegazebo/: Curvegazebo.ino
Laptop/Backup2(Test Algorithm Attempt)/encoder_test/: encoder_test.ino
Laptop/Backup2(Test Algorithm Attempt)/imu/: imu.ino
Laptop/Backup2(Test Algorithm Attempt)/imusteelplate/: imusteelplate.ino
Laptop/Backup2(Test Algorithm Attempt)/peemai_delta/: peemai_delta.ino
Laptop/Backup2(Test Algorithm Attempt)/peemai_delta19_04/: peemai_delta19_04.ino
Laptop/Backup2(Test Algorithm Attempt)/savingIMUsteel/: savingIMUsteel.ino
Laptop/Backup2(Test Algorithm Attempt)/sketch_apr27a/: sketch_apr27a.ino
Laptop/Backup2(Test Algorithm Attempt)/sketch_feb02a/: sketch_feb02a.ino
Laptop/Backup2(Test Algorithm Attempt)/sketch_feb06a/: sketch_feb06a.ino
Laptop/Backup2(Test Algorithm Attempt)/sketch_feb16a/: sketch_feb16a.ino
Laptop/Backup2(Test Algorithm Attempt)/sketch_mar06a/: sketch_mar06a.ino
Laptop/Backup2(Test Algorithm Attempt)/slavemotortest/: slavemotortest.ino
Laptop/Backup2(Test Algorithm Attempt)/syncing/: syncing.ino
Laptop/Backup2(Test Algorithm Attempt)/trackcompass/: trackcompass.ino
Laptop/Backup2(Test Algorithm Attempt)/trymasterkinematic/: trymasterkinematic.ino
Laptop/Backup2(Test Algorithm Attempt)/trymasterkinematic2/: trymasterkinematic2.ino
Laptop/Backup2(Test Algorithm Attempt)/trymasterkinematic3/: trymasterkinematic3.ino
Laptop/Backup2(Test Algorithm Attempt)/trymasterkinematic4/: trymasterkinematic4.ino
Laptop/Backup2(Test Algorithm Attempt)/trymasterkinematic5/: trymasterkinematic5.ino
Laptop/Backup2(Test Algorithm Attempt)/trymasterkinematic6/: trymasterkinematic6.ino
Laptop/Backup2(Test Algorithm Attempt)/trymasterkinematic7/: trymasterkinematic7.ino
Laptop/Backup2(Test Algorithm Attempt)/turncompass/: turncompass.ino
Laptop/Backup2(Test Algorithm Attempt)/turncompassgazebo/: turncompassgazebo.ino
Laptop/Backup2(Test Algorithm Attempt)/turnplustrackcompass/: turnplustrackcompass.ino
Laptop/Backup2(Test Algorithm Attempt)/turnplustrackcompassquickedit/: turnplustrackcompassquickedit.ino
Laptop/Backup2(Test Algorithm Attempt)/turnplustrackcompassslave2isleader/: turnplustrackcompassslave2isleader.ino
Laptop/Backup2(Test Algorithm Attempt)/turnplustrackcompassslaveisleader/: turnplustrackcompassslaveisleader.ino
Laptop/allarduino/fromleader/: fromleader.ino
Laptop/allarduino/fromslave/: fromslave.ino
Laptop/allarduino/imu/1/: 1.ino
Laptop/allarduino/imu/2/: 2.ino
Laptop/map/: floor9.yaml  floor9slam.pgm  floor9slam.yaml  floor9slambackup.pgm  floor9slamreal.pgm
Laptop/pete_ws/devel/: _setup_util.py  local_setup.sh  setup.sh
Laptop/pete_ws/src/holo/holo_description/: CMakeLists.txt  package.xml  urdf.rviz
Laptop/pete_ws/src/holo/holo_description/launch/: display.launch  holo_description.launch
Laptop/pete_ws/src/holo/holo_description/meshes/: base_link.STL
Laptop/pete_ws/src/holo/holo_description/urdf/: holo.csv  holo.gazebo  holo.xacro
Laptop/pete_ws/src/holo/holo_gazebo/: CMakeLists.txt
Laptop/pete_ws/src/holo/holo_gazebo/launch/: holo_floor9_multi.launch
Laptop/pete_ws/src/non/non_gazebo/: CMakeLists.txt  package.xml
Laptop/pete_ws/src/non/non_gazebo/launch/: non_checkkinematic.launch  non_floor9.launch  non_floor9_multi.launch  non_multi.launch  non_world.launch  spawn_one_non.launch
Laptop/pete_ws/src/object/object_gazebo/: CMakeLists.txt
Non_Holonomic/Arduino/: Please Read  leaderdrive.ino  try_encoder_diffbot.ino
Non_Holonomic/Arduino/TeleopDrive/: TeleopDrive.ino
Non_Holonomic/Arduino/encoder_test/: encoder_test.ino
Non_Holonomic/Arduino/fromleaderbackup/: fromleaderbackup.ino
Non_Holonomic/Arduino/sketch_aug05a/: sketch_aug05a.ino
Non_Holonomic/Arduino/sketch_aug05b/: sketch_aug05b.ino
Non_Holonomic/Arduino/slavemotortest/: slavemotortest.ino
Non_Holonomic/Arduino/teleoplast/: teleoplast.ino
Non_Holonomic/pete_ws/src/URDF/non/non_description/: CMakeLists.txt  package.xml
Non_Holonomic/pete_ws/src/URDF/non/non_description/launch/: gazebo.launch  non_rviz.launch
Non_Holonomic/pete_ws/src/URDF/non/non_description/meshes/: link_wheel_right.STL
Non_Holonomic/pete_ws/src/URDF/non/non_description/urdf/: non.gazebo  non.urdf  non.xacro
(+220 files in other folders)
