<?xml version="1.0"?>
<package format="2">
  <name>non_description</name>
  <version>1.0.0</version>
  <description>The non_description package</description>

  <maintainer email="dreamneoos9@hotmail.com">natchanon</maintainer>
  
  <license>TODO</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>robot_state_publisher</build_depend>
  <build_depend>urdf</build_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>kdl_parser</exec_depend>

</package>